[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "content-engine"
version = "1.0.0"
description = "A multi-platform content publishing engine for dev.to and Hashnode"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Content Engine", email = "content@example.com"},
]
keywords = ["content", "publishing", "devto", "hashnode", "markdown", "engine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "astroid==3.1.0",
    "black==24.3.0",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "dill==0.3.8",
    "fpyutils==4.0.1",
    "gitdb==4.0.11",
    "GitPython==3.1.43",
    "idna==3.6",
    "isort==5.13.2",
    "mccabe==0.7.0",
    "md_toc==9.0.0",
    "mypy-extensions==1.0.0",
    "packaging==24.0",
    "pathspec==0.12.1",
    "platformdirs==4.2.0",
    "pylint==3.1.0",
    "python-frontmatter==1.1.0",
    "PyYAML==6.0.1",
    "requests==2.31.0",
    "smmap==5.0.1",
    "tomlkit==0.12.4",
    "urllib3==2.2.1",
    "hypothesis>=6.0.0",  # For property-based testing
    "gql>=3.5.3",
    "aiohttp>=3.10.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/example/content-engine"
Repository = "https://github.com/example/content-engine"
Issues = "https://github.com/example/content-engine/issues"

[project.scripts]
content-engine = "src.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.pylint.messages_control]
disable = ["C0330", "C0326"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
